--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@editorjs/nested-list",
-  "version": "1.0.2",
+  "name": "@demoflow/nested-list",
+  "version": "1.0.0",
   "description": "Nested list Tool for EditorJS",
   "main": "dist/nested-list.js",
   "repository": "https://github.com/editor-js/nested-list.git",
