--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "Nested list Tool for EditorJS",
   "main": "dist/nested-list.js",
-  "repository": "https://github.com/editor-js/nested-list.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/editor-js/nested-list.git"
+  },
   "author": "CodeX <team@codex.so>",
   "license": "MIT",
   "scripts": {
@@ -24,5 +27,212 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.24.1",
     "webpack-cli": "^4.5.0"
+  },
+  "bugs": {
+    "url": "https://github.com/editor-js/nested-list/issues"
+  },
+  "homepage": "https://github.com/editor-js/nested-list#readme",
+  "directories": {
+    "example": "example"
+  },
+  "dependencies": {
+    "ajv": "^6.12.6",
+    "acorn-jsx": "^5.3.1",
+    "ajv-keywords": "^3.5.2",
+    "ansi-regex": "^5.0.0",
+    "acorn": "^7.4.1",
+    "ansi-colors": "^4.1.1",
+    "ansi-styles": "^4.3.0",
+    "astral-regex": "^2.0.0",
+    "balanced-match": "^1.0.0",
+    "brace-expansion": "^1.1.11",
+    "big.js": "^5.2.2",
+    "browserslist": "^4.16.3",
+    "argparse": "^1.0.10",
+    "buffer-from": "^1.1.1",
+    "chalk": "^2.4.2",
+    "camelcase": "^6.2.0",
+    "caniuse-lite": "^1.0.30001204",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "chrome-trace-event": "^1.0.2",
+    "clone-deep": "^4.0.1",
+    "commander": "^7.2.0",
+    "commondir": "^1.0.1",
+    "cosmiconfig": "^7.0.0",
+    "colorette": "^1.2.2",
+    "cross-spawn": "^7.0.3",
+    "concat-map": "^0.0.1",
+    "debug": "^4.3.1",
+    "cssesc": "^3.0.0",
+    "deep-is": "^0.1.3",
+    "electron-to-chromium": "^1.3.699",
+    "doctrine": "^3.0.0",
+    "emojis-list": "^3.0.0",
+    "emoji-regex": "^8.0.0",
+    "enhanced-resolve": "^5.7.0",
+    "envinfo": "^7.7.4",
+    "enquirer": "^2.3.6",
+    "es-module-lexer": "^0.4.1",
+    "error-ex": "^1.3.2",
+    "escalade": "^3.1.1",
+    "escape-string-regexp": "^1.0.5",
+    "eslint-scope": "^5.1.1",
+    "eslint-utils": "^2.1.0",
+    "eslint-visitor-keys": "^1.3.0",
+    "esprima": "^4.0.1",
+    "esquery": "^1.4.0",
+    "espree": "^7.3.1",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^5.2.0",
+    "events": "^3.3.0",
+    "esutils": "^2.0.3",
+    "execa": "^5.0.0",
+    "fast-deep-equal": "^3.1.3",
+    "fast-levenshtein": "^2.0.6",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fastest-levenshtein": "^1.0.12",
+    "file-entry-cache": "^6.0.1",
+    "flat-cache": "^3.0.4",
+    "find-cache-dir": "^3.3.1",
+    "find-up": "^4.1.0",
+    "flatted": "^3.1.1",
+    "function-bind": "^1.1.1",
+    "fs-extra": "^8.1.0",
+    "fs.realpath": "^1.0.0",
+    "functional-red-black-tree": "^1.0.1",
+    "glob": "^7.1.6",
+    "glob-to-regexp": "^0.4.1",
+    "get-stream": "^6.0.0",
+    "graceful-fs": "^4.2.6",
+    "glob-parent": "^5.1.2",
+    "globals": "^13.7.0",
+    "has": "^1.0.3",
+    "icss-utils": "^5.1.0",
+    "has-flag": "^3.0.0",
+    "import-fresh": "^3.3.0",
+    "human-signals": "^2.1.0",
+    "ignore": "^4.0.6",
+    "indexes-of": "^1.0.1",
+    "import-local": "^3.0.2",
+    "imurmurhash": "^0.1.4",
+    "inherits": "^2.0.4",
+    "inflight": "^1.0.6",
+    "is-core-module": "^2.2.0",
+    "is-arrayish": "^0.2.1",
+    "is-extglob": "^2.1.1",
+    "interpret": "^2.2.0",
+    "is-glob": "^4.0.1",
+    "is-plain-object": "^2.0.4",
+    "isobject": "^3.0.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-stream": "^2.0.0",
+    "callsites": "^3.1.0",
+    "jest-worker": "^26.6.2",
+    "js-yaml": "^3.14.1",
+    "json-parse-better-errors": "^1.0.2",
+    "json-schema-traverse": "^0.4.1",
+    "js-tokens": "^4.0.0",
+    "jsonfile": "^4.0.0",
+    "json-parse-even-better-errors": "^2.3.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "kind-of": "^6.0.3",
+    "klona": "^2.0.4",
+    "levn": "^0.4.1",
+    "json5": "^2.2.0",
+    "locate-path": "^5.0.0",
+    "loader-utils": "^2.0.0",
+    "lines-and-columns": "^1.1.6",
+    "lru-cache": "^6.0.0",
+    "merge-stream": "^2.0.0",
+    "lodash": "^4.17.21",
+    "make-dir": "^3.1.0",
+    "minimist": "^1.2.5",
+    "mime-db": "^1.46.0",
+    "loader-runner": "^4.2.0",
+    "mime-types": "^2.1.29",
+    "mimic-fn": "^2.1.0",
+    "ms": "^2.1.2",
+    "nanoid": "^3.1.22",
+    "minimatch": "^3.0.4",
+    "neo-async": "^2.6.2",
+    "npm-run-path": "^4.0.1",
+    "node-releases": "^1.1.71",
+    "isexe": "^2.0.0",
+    "p-limit": "^3.1.0",
+    "optionator": "^0.9.1",
+    "object-hash": "^2.1.1",
+    "once": "^1.4.0",
+    "natural-compare": "^1.4.0",
+    "parent-module": "^1.0.1",
+    "path-key": "^3.1.1",
+    "pkg-dir": "^4.2.0",
+    "parse-json": "^5.2.0",
+    "path-is-absolute": "^1.0.1",
+    "path-exists": "^4.0.0",
+    "p-try": "^2.2.0",
+    "postcss-modules-values": "^4.0.0",
+    "p-locate": "^4.1.0",
+    "postcss-modules-extract-imports": "^3.0.0",
+    "postcss-modules-scope": "^3.0.0",
+    "path-parse": "^1.0.6",
+    "path-type": "^4.0.0",
+    "postcss-selector-parser": "^6.0.4",
+    "onetime": "^5.1.2",
+    "postcss-value-parser": "^4.1.0",
+    "postcss-modules-local-by-default": "^4.0.0",
+    "punycode": "^2.1.1",
+    "prelude-ls": "^1.2.1",
+    "require-from-string": "^2.0.2",
+    "progress": "^2.0.3",
+    "regexpp": "^3.1.0",
+    "resolve-from": "^4.0.0",
+    "resolve": "^1.20.0",
+    "rechoir": "^0.7.0",
+    "safe-buffer": "^5.2.1",
+    "postcss-resolve-nested-selector": "^0.1.1",
+    "schema-utils": "^3.0.0",
+    "resolve-cwd": "^3.0.0",
+    "randombytes": "^2.1.0",
+    "semver": "^7.3.5",
+    "shallow-clone": "^3.0.1",
+    "rimraf": "^3.0.2",
+    "shebang-command": "^2.0.0",
+    "serialize-javascript": "^5.0.1",
+    "signal-exit": "^3.0.3",
+    "slice-ansi": "^4.0.0",
+    "source-map-support": "^0.5.19",
+    "source-map": "^0.6.1",
+    "source-list-map": "^2.0.1",
+    "strip-ansi": "^6.0.0",
+    "strip-json-comments": "^3.1.1",
+    "string-width": "^4.2.2",
+    "sprintf-js": "^1.0.3",
+    "strip-final-newline": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "table": "^6.0.7",
+    "text-table": "^0.2.0",
+    "supports-color": "^5.5.0",
+    "tapable": "^2.2.0",
+    "terser-webpack-plugin": "^5.1.1",
+    "uri-js": "^4.4.1",
+    "tslib": "^1.14.1",
+    "type-fest": "^0.20.2",
+    "util-deprecate": "^1.0.2",
+    "watchpack": "^2.1.1",
+    "v8-compile-cache": "^2.3.0",
+    "terser": "^5.6.1",
+    "webpack-merge": "^5.7.3",
+    "webpack-sources": "^2.2.0",
+    "wildcard": "^2.0.0",
+    "which": "^2.0.2",
+    "word-wrap": "^1.2.3",
+    "yallist": "^4.0.0",
+    "wrappy": "^1.0.2",
+    "yaml": "^1.10.2",
+    "universalify": "^0.1.2",
+    "uniq": "^1.0.1",
+    "yocto-queue": "^0.1.0",
+    "type-check": "^0.4.0"
   }
 }
